# camera

./: Cargo.toml  cyber_attack.sh  dependencynots  grindnots  helgrind.txt  main_log.txt  nots  record.py  rust-toolchain  valgrind.txt
src/: hardware.rs  log.rs  main.rs  queue.rs  ui.rs
src/compute/: audio.rs  video.rs
src/hardware/: audio.rs  battery.rs  bluetooth.rs  camera.rs  storage.rs
