[package]
name = "camera"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "stable"

[dependencies]
# feature based motion detection
# cv = "0.6.0"
sled = "0.34.7"
winit = "0.28.6"
# uvc = {version = 0.2.0, features = ["vendor"]}
# audio denoising
nnnoiseless = "0.5.1"
# image denoising
  # oidn = "1.4.3"
# using raster::filter::{sharpen, brightness}
raster = "0.2.0"
# libasound2-dev
cpal = "0.15.2"
# cpal needs gag for logging
# gag = "1.0.0"
# must be initialized
# with .set_logger()
log = "0.4.17"

pasts = "0.14.2"
iso8601 = {version = "0.6.1", default-features = false}
futures-core = {version = "0.3.28", default-features = false}
# unix timestamp to internet is8601 (rfc3339)
#eep = "0.1.0"
simple_logger = {version = "4.1.0", features = ["colors", "threads", "nightly", "stderr"]}
nolock = {version = "0.4.1", features = ["async", "atomic", "futures", "hash_trie"]}
anyhow = "1.0.71"
cfg-if = "1.0.0"
gag = "1.0.0"
btleplug = {version = "0.11.0", features=["serde"]}

[features]
default = ["std"]
std = []
debug = []
logout = []
logstorage = []
logsetup = []
audiocompute = []
audioinput = []
audiostorage = []
audiosetup = []
videocompute = []
videoinput = []
videostorage = []
videosetup = []
ui = []
uisetup = []
main = []
all-jobs-logged = [
  "debug",
  "logout",
  "logstorage",
  "logsetup",
  "audiocompute",
  "audioinput",
  "audiostorage",
  "audiosetup",
  "videocompute",
  "videoinput",
  "videostorage",
  "videosetup",
  "ui",
  "uisetup",
  "main",
]

